Make code shorter, correct errors

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,9 @@
             <a href="./index.html" class="nav-link link">Студія</a>
           </li>
           <li class="nav-item">
-            <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+            <a href="./portfolio.html" class="nav-link link current"
+              >Портфоліо</a
+            >
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link link">Контакти</a>
@@ -46,7 +48,7 @@
     </header>
     <main>
       <section class="portfolio">
-        <h2 class="visually-hidden">Портфоліо</h2>
+        <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="list buttons-list">
           <li class="buttons-item">
             <button type="button" class="portfolio-button">Усі</button>
@@ -72,7 +74,7 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">Технокряк</h3>
+            <h2 class="portfolio-title">Технокряк</h2>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li class="portfolio-item">
@@ -82,9 +84,9 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">
+            <h2 class="portfolio-title">
               Постер<span lang="en"> New Orlean vs Golden Star</span>
-            </h3>
+            </h2>
             <p class="portfolio-text">Дизайн</p>
           </li>
           <li class="portfolio-item">
@@ -94,9 +96,9 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">
+            <h2 class="portfolio-title">
               Ресторан <span lang="en">Seafood</span>
-            </h3>
+            </h2>
             <p class="portfolio-text">Додаток</p>
           </li>
           <li class="portfolio-item">
@@ -106,7 +108,7 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">Проєкт <span lang="en">Prime</span></h3>
+            <h2 class="portfolio-title">Проєкт <span lang="en">Prime</span></h2>
             <p class="portfolio-text">Маркетинг</p>
           </li>
           <li class="portfolio-item">
@@ -116,7 +118,7 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">Проєкт <span lang="en">Boxes</span></h3>
+            <h2 class="portfolio-title">Проєкт <span lang="en">Boxes</span></h2>
             <p class="portfolio-text">Додаток</p>
           </li>
           <li class="portfolio-item">
@@ -126,9 +128,9 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">
+            <h2 class="portfolio-title">
               <span lang="en">Inspiration has no Borders</span>
-            </h3>
+            </h2>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li class="portfolio-item">
@@ -138,7 +140,9 @@
               width="370"
               height="294"
             />
-            <h3>Видання <span lang="en">Limited Edition</span></h3>
+            <h2 class="portfolio-title">
+              Видання <span lang="en">Limited Edition</span>
+            </h2>
             <p class="portfolio-text">Дизайн</p>
           </li>
           <li class="portfolio-item">
@@ -148,7 +152,7 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">Проєкт <span lang="en">LAB</span></h3>
+            <h2 class="portfolio-title">Проєкт <span lang="en">LAB</span></h2>
             <p class="portfolio-text">Маркетинг</p>
           </li>
           <li class="portfolio-item">
@@ -158,9 +162,9 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">
+            <h2 class="portfolio-title">
               <span lang="en">Growing Business</span>
-            </h3>
+            </h2>
             <p class="portfolio-text">Додаток</p>
           </li>
         </ul>
