--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         >
         <ul class="list nav-list">
           <li class="nav-item">
-            <a href="./index.html" class="nav-link link">Студія</a>
+            <a href="./index.html" class="nav-link link current">Студія</a>
           </li>
           <li class="nav-item">
             <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
@@ -82,7 +82,7 @@
         </ul>
       </section>
       <section class="job">
-        <h2 class="job-title">Чим ми займаємося</h2>
+        <h2 class="title">Чим ми займаємося</h2>
         <ul class="list job-list">
           <li class="job-item">
             <img src="./images/img_tab-min.jpg" alt="Друк коду" width="370" />
@@ -106,7 +106,7 @@
         </ul>
       </section>
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="title">Наша команда</h2>
         <ul class="list team-list">
           <li class="team-item">
             <img
@@ -116,7 +116,7 @@
               height="260"
             />
             <h3 class="team-item-title">Ігор Дем'яненко</h3>
-            <p class="team-item-descr">Product Designer</p>
+            <p class="team-descr">Product Designer</p>
           </li>
           <li class="team-item">
             <img
@@ -126,7 +126,7 @@
               height="260"
             />
             <h3 class="team-item-title">Ольга Рєпіна</h3>
-            <p class="team-item-descr">Frontend Developer</p>
+            <p class="team-descr">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img
@@ -136,7 +136,7 @@
               height="260"
             />
             <h3 class="team-item-title">Микола Тарасов</h3>
-            <p class="team-item-descr">Marketing</p>
+            <p class="team-descr">Marketing</p>
           </li>
           <li class="team-item">
             <img
@@ -146,7 +146,7 @@
               height="260"
             />
             <h3 class="team-item-title">Михайло Єрмаков</h3>
-            <p class="team-item-descr">UI Designer</p>
+            <p class="team-descr">UI Designer</p>
           </li>
         </ul>
       </section>
