--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </ul>
       </section>
       <section class="job">
-        <h2 class="title">Чим ми займаємося</h2>
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="list job-list">
           <li class="job-item">
             <img src="./images/img_tab-min.jpg" alt="Друк коду" width="370" />
@@ -106,7 +106,7 @@
         </ul>
       </section>
       <section class="team">
-        <h2 class="title">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="list team-list">
           <li class="team-item">
             <img
